--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -432,7 +432,8 @@ section {
     border-color: pink;
 }
 
-.submit_form input[type="submit"], .modal-dialog button.submit_form_btn {
+.submit_form input[type="submit"],
+.modal-dialog button.submit_form_btn {
     background: #ce3232;
     border-color: transparent;
     border-radius: 100px;
@@ -574,4 +575,21 @@ section {
         position: relative;
         bottom: 6em;
     }
+}
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #F5F5F5;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar {
+    width: 5px;
+    background-color: #F5F5F5;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #ce3232;
 }
