--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -593,3 +593,25 @@ section {
     border-radius: 5px;
     background-color: #ce3232;
 }
+
+#data_camera,
+#canvas {
+    width: 100%;
+}
+
+.text_effect {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    color: #ce3232;
+    font-weight: bold;
+}
+.control, .camera_snapped{
+    position: relative;
+}
+.box_recognition{
+    position: absolute;
+    border: 2px solid #ce3232;
+}
